--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section id="uno">   
     <div class="container mt-5"id="pagina1">
         <div class="margen"></div>
-        <div><img class="centrado" id="micara" src="./roun.png"></div>
+        <div><img class="centrado" id="micara" src="./ROUN.png"></div>
         <div class="autotype">
             <h1 class="text"></h1>
           </div>
