--- a/index.html
+++ b/index.html
@@ -117,23 +117,23 @@
     <div>
         <p style="color:white"> Si quieres trabajar conmigo o simplemente saludarme, estaré encantado de leerte</p>
         <br>
-        <form action="https://formspree.io/f/maylbqvv" method="POST" enctype="text/plain">
+        <form action="https://formspree.io/f/maylbqvv" method="POST">
         <div class="form-group row">
-            <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Nombre</label>
+            <label for="nombre" class="col-sm-2 col-form-label col-form-label-lg">Nombre</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Aquí tu nombre">
+              <input type="text" class="form-control" name="nombre" required placeholder="Aquí tu nombre">
             </div>
           </div>
         <div class="form-group row">
-          <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Email</label>
+          <label for="email" class="col-sm-2 col-form-label col-form-label-lg">Email</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" name="email" id="email" placeholder="Tu email de contacto" required>
+            <input type="email" class="form-control" name="email" placeholder="Tu email de contacto" required>
           </div>
         </div>
         <div class="form-group row">
-            <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Mensaje</label>
+            <label for="mensaje" class="col-sm-2 col-form-label col-form-label-lg">Mensaje</label>
             <div class="col-sm-10">
-                <textarea class="form-control" id="mensaje" name="mensaje" placeholder="Escribe un mensaje" rows="5" required></textarea>
+                <textarea class="form-control" name="mensaje" placeholder="Escribe un mensaje" rows="5" required></textarea>
             </div>
           </div>
           <div  class="float-right"><button id="hola" type="submit" class="btn btn-lg">ENVIAR!</button>
