cambio no aparece formula en responsive

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="col-lg-6 col-sm">
           
-          <div id="formula"><p>Siguiendo mi propia formula</p><span class="text-info">function </span><span class="text-warning">programar </span><span class="text-primary">(trabajo){</span><br><span class="text-primary">trabajo+= dedición + creatividad;</span><br><span class="text-info">return </span><span class="text-primary">trabajo;</span><br><span class="text-primary">}</span></div>
+          <div id="formula"><span class="text-info">function </span><span class="text-warning">programar </span><span class="text-primary">(trabajo){</span><br><span class="text-primary">trabajo+= dedición + creatividad;</span><br><span class="text-info">return </span><span class="text-primary">trabajo;</span><br><span class="text-primary">}</span></div>
         </div>
     </div>
     <br><br>
