--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p id="presentacion" class="wow bounceInUp" > Hola! soy <b>Jesús Cano</b>, soy Full Stack developer capacitado para crear todo tipo de webs. Estas son algunas de las herramientas que utilizo: </p>    
        
         <div class="margen"></div>
-        <div class="margen"></div>
+        <div class="margen ajuste"></div>
         <div class="row">
             
             <div class="col-6 col-sm-3 col-md-3 col-lg-3 text-center pb-5"><i class="fab fa-html5" data-toggle="tooltip" data-placement="left" title="HTML"style="color: orange"></i> </div>
