resizing contact form responsive

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
 <section id="cuatro">
     <div class="container">
     <div class="margen"></div>
-    <div class="margen"></div>
+    <div class="margen quitar"></div>
     
     <div>
-        <p style="color:white"> Si quieres trabajar conmigo o simplemente saludarme, estaré encantado de leerte</p>
+        <p class="quitar" style="color:white"> Si quieres trabajar conmigo o simplemente saludarme, estaré encantado de leerte</p>
         <br>
-        <form action="https://formspree.io/f/maylbqvv" method="POST">
+        <form  class="centrarform" action="https://formspree.io/f/maylbqvv" method="POST">
         <div class="form-group row">
             <label for="nombre" class="col-sm-2 col-form-label col-form-label-lg">Nombre</label>
             <div class="col-sm-10">
