añadiendo mi-reserva al portfolio y un hover

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 <!-- ///////////////////// -->
         <div class="row">
           <div class="col">
+            
+             <a href="http://mi-reserva.herokuapp.com/" target="_blank"><img class="img-fluid img-thumbnail colocar" src="http://mi-reserva.herokuapp.com/assets/LogoMiReserva.svg"></a>
             <img class="img-fluid img-thumbnail redimensionar" src="https://images.unsplash.com/photo-1560806108-41a68051b9b5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=263&q=20">
             <img class="img-fluid img-thumbnail redimensionar" src="https://images.unsplash.com/photo-1481349518771-20055b2a7b24?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=263&q=20">
             <img class="img-fluid img-thumbnail redimensionar" src="https://images.unsplash.com/photo-1489533119213-66a5cd877091?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80">
